# tyupy

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yaml  ci.yml  release.yaml  release.yml
configs/: cliff.toml
docs/dev/: README.md
src/: cli.rs  config.rs  error.rs  fmt.rs  lib.rs  main.rs  out.rs  output.rs  web.rs
tests/: integration.rs
