[package]
name = "tyupy"
version = "1.1.0"
authors = ["azzamsa <vcs@azzamsa.com>"]
categories = ["command-line-utilities"]
edition = "2021"
exclude = ["/README.md"]
keywords = ["cli", "formatter"]
license = "MIT"
repository = "https://github.com/azzamsa/tyupy"
rust-version = "1.73.0"
description = "Get URL(s) title in any format"

[profile.release]
opt-level = 'z' # Optimize for size.
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
# cli
clap = { version = "4.4.11", features = ["suggestions", "color", "cargo", "derive"] }

# error
miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0"

reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
select = "0.6.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = "3.0"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version}-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["just", "_release-prepare", "{{version}}"]
